# auto-fiddler

./: .gitignore  pyproject.toml
.github/workflows/: super_linter.yaml
auto_fiddler/: abc.yaml  download.py  downloader.py  extract.py  main.py  txt.yaml
auto_fiddler/data_collection/: downloader.py
auto_fiddler/processing/: loading.py
docs/: design.md
