[tool.poetry]
name = "auto-fiddler"
version = "0.1.0"
description = ""
authors = ["trevsuth <trevor.sutherland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
music21 = "^9.3.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
